web_ping/K8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: web-ping-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      project: web-ping
  template:
    metadata:
      labels:
        project: web-ping
    spec:
      containers:
      - name: web-ping-pod
#        image: andennis/web-ping:1.1
        image: docker-registry-andn.local/web-ping:1.1
        ports:
        - containerPort: 5000
