web_ping/K8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: web-ping-pod
  labels:
    project: web-ping
spec:
  containers:
    - name: web-ping
      image: andennis/web-ping:1.1
#      image: docker-registry-andn.local/web-ping:1.1
      ports:
        - containerPort: 5000
  imagePullSecrets:
    - name: dr-andn-cred-secret
