web_ping/K8s/rolling-update.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: web-ping-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      project: web-ping

  minReadySeconds: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        project: web-ping
    spec:
      containers:
      - name: web-ping-pod
        image: registry.local/web-ping:1.2
        ports:
        - containerPort: 5000
