web_ping/K8s/svc-cl.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: web-ping-cl
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 5000
  selector:
    project: web-ping
