web_ping/K8s/svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: web-ping-lb
  annotations:
    loadbalancer.openstack.org/x-forwarded-for: "True"
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 5000
  selector:
    project: web-ping
