web_ping/K8s/svc-np.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: web-app1-np
spec:
  type: NodePort
#  externalIPs:
#    - 192.168.2.101
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5000
    nodePort: 31111
  selector:
    project: web-app1
